--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,16 +12,16 @@ title: Le Wagon - Middleman
 
 <div class="container">
   <div class="row">
-    <% data.cities.each do |city| %>
+    <% data.flats.each do |owner, flat| %>
     <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= "https://kitt.lewagon.com/placeholder/cities/#{city.name}" %>)">
-        <div class="card-category">Popular</div>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%= flat.city_slug %>');">
+        <div class="card-category"><%= flat.city_name %></div>
         <div class="card-description">
-          <h2>Le Wagon <%= city.name.capitalize %></h2>
-          <p>Very cool city, the best</p>
+          <h2><%= flat.name.capitalize %></h2>
+          <p><%= flat.description %></p>
         </div>
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{city.driver}", class: "card-user" %>
-        <a class="card-link" href="#" ></a>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{owner}", class: "card-user" %>
+        <%= link_to "", "flats/#{owner}.html", class: "card-link" %>
       </div>
     </div>
     <% end %>
