--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -6,5 +6,6 @@ $blue: #364F6B;
 $yellow: #FFDD7E;
 $orange: #F27370;
 $green: #3FC1C9;
-$gray: #000000;
+$gray: #777777;
 $light-gray: #F5F5F5;
+$black: #333333;
