--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -2,7 +2,7 @@
   <ul class="list-inline text-center">
     <% data.users.each do |user| %>
       <li>
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle avatar" %>
+        <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle avatar-lg" %>
         <h3><%= user.name.capitalize %></h3>
         <p>
           <a href="https://github.com/<%= user.github_nickname %>">
